--- a/css/buttons.css
+++ b/css/buttons.css
@@ -19,12 +19,12 @@
     position: fixed;
     bottom: 8rem;
     right: 5rem;
-    background-color: var(--color-bg-soft);
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0.2), rgba(0, 0, 0, 0.466));
     backdrop-filter: blur(5px);
     border-radius: 5px;
     padding: 2px;
-    -webkit-backdrop-filter: blur(5px);
-    z-index: 999;
+    
+    z-index:2;
     
 }
 .carusel-btn{
