--- a/css/buttons.css
+++ b/css/buttons.css
@@ -99,17 +99,17 @@
 
 
 .dropdown-btn{
-    color: var(--background-dot);
+    color: var(--color-text-secondary);
     outline: none;
     border: none;
     background-color: transparent;
     font-size: 12px;
-    margin: .2rem .5rem .2rem .5rem;
+   
 }
-.dropdown-exit-btn {
+.dropdown-exit-btn,.exit-btn {
     width: 1rem;
     height: 1rem;
-    color: var(--background-dot);
+    color: var(--color-text-secondary);
     outline: none;
     border: none;
     margin: .2rem;
@@ -119,6 +119,19 @@
     align-self:self-end ;
     height: auto;
 }
-   
+.exit-btn {
+    margin: 0 1rem 1rem 0;
+}
+.search-btn{
+    width: 1rem;
+    height: 1rem;
+    color: var(--color-text-secondary);
+    outline: none;
+    border: none;
+    right:1rem;
+    cursor: pointer;
+    position: relative;
+    background-color: transparent;
+}
     
     
