--- a/css/layout.css
+++ b/css/layout.css
@@ -5,7 +5,7 @@
   --color-glass-bg: rgba(22, 22, 22, 0.6); /* Glassmorphic okna */
   --color-text-primary: #ffffff;
   --color-text-secondary: #aaaaaa;
-  --color-divider: rgba(255, 255, 255, 0.07);
+  --color-divider: rgba(117, 112, 112, 0.404);
   --color-cards-bg: linear-gradient(120deg,rgba(26, 31, 41, 1) 64%, rgba(107, 205, 206, 1) 95%, rgba(107, 205, 206, 1) 86%);
   /*  Akcenty */
   --color-accent: #6BCDCE;
@@ -18,6 +18,7 @@
   --color-warning: #ffc857;
 
   /*  Elementy UI */
+  --color-hamburger:#1c1c1e96;
   --color-button-hover: rgba(255, 255, 255, 0.05);
   --color-input-border: rgba(255, 255, 255, 0.15);
   --color-scrollbar: rgba(255, 255, 255, 0.1);
@@ -65,29 +66,81 @@ body{
     flex-wrap: wrap;
     height: 100%;
     width: 100%;
-    background: #0E0E0E;
+    
     background-color: var(--glass-border);
     backdrop-filter: blur(15px);
     -webkit-backdrop-filter: blur(15px);
     flex-direction: column;
-    text-align: initial;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: center;
+    
     scrollbar-width: none;           
     -ms-overflow-style: none; 
     z-index: 3;
+    color: var(--color-text-secondary);
 }
+
 .sidebar-container{
     display: flex;
     height: 90%;
     width: 80%;
     border-radius: 10px;
     border: solid 0.5px var(--glass-border);
+    flex-direction: column;
+    align-items: center;
+    background-color: var(--color-hamburger);
+    box-shadow: 2px 3px 15px var(--color-divider) ;
 }
-    
-    
+.exit-btn-container{
+    height: auto;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 1rem;
+    align-items: center;
+    margin:1rem 0 .5rem 0
+}
+.brgr-menu{
+    margin:1rem 0 .5rem 2rem
+}
+.search-bar label {
+    left: 5.5rem;
+}
 .search-bar{
     display: flex;
-    width: 80%;
+    width: 100%;
+    justify-content: center;
+    flex-direction: row-reverse;
 }
+.divider{
+    border-bottom: solid .5px var(--glass-border);
+    width: 80%;
+    margin-top: .5rem;
+    box-shadow: 2px 3px 20px var(--color-divider) ;
+}
+.nav-section {
+    display:flex;
+    flex-direction: column;
+    width: 100%;
+    align-items: flex-start;
+    margin: .5rem 0 0 4rem;
+}
+.nav-section p,a {
+    margin-top: .5rem;
+}
+.bottom-action{
+    width: 100%;
+    display: flex;
+    margin-top: 1rem;
+    justify-content: center;
+    align-items: center;
+}
+    
+    
+
+    
+    
 .apk-screen::-webkit-scrollbar{
     display: none;
 }
@@ -172,16 +225,21 @@ body{
 
 .dropdown{
     position:absolute;
-    background-color: var(--glass-bg);
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
-    border-radius: 8px;
-    color: var(--background-dot);
-    display: flex;
+    background-color: var(--glass-border);
+    backdrop-filter: blur(15px);
+    -webkit-backdrop-filter: blur(15px);
     flex-direction: column;
-    align-items: flex-end;
-    top: 2rem;
-    left: .2rem;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: center;
+    border-radius: 5px;
+    scrollbar-width: none;           
+    -ms-overflow-style: none; 
+    z-index: 3;
+    color: var(--color-text-secondary);
+    top: 3rem;
+    width: 6rem
+   
 }
 .list-section {
   flex-grow: 1;
