--- a/css/buttons.css
+++ b/css/buttons.css
@@ -80,6 +80,7 @@
     margin: .5rem ;
     background: var(--color-btns);
     align-items: center;
+    
     justify-content: center;
     
     border-radius: 5px;
@@ -102,7 +103,9 @@
     color: var(--color-text-secondary);
     outline: none;
     border: none;
+    width: 100%;
     background-color: transparent;
+    margin-top: .5rem;
     font-size: 12px;
    
 }
@@ -122,6 +125,9 @@
 .exit-btn {
     margin: 0 1rem 1rem 0;
 }
+.exit-btn2{
+    margin: 0;
+}
 .search-btn{
     width: 1rem;
     height: 1rem;
@@ -132,6 +138,17 @@
     cursor: pointer;
     position: relative;
     background-color: transparent;
+}
+.goback-btn-container{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    margin:0 .5rem .5rem .5rem;
+    
+}
+.user-nav-section{
+    display: flex;
+    flex-direction: column;
 }
     
     
