--- a/css/roudmap.css
+++ b/css/roudmap.css
@@ -297,7 +297,7 @@
   }
   .roudnode-title::placeholder{
     color: var(--color-text-secondary);
-    font-size: 14px;
+    font-size: 12px;
     font-family: "Oxanium", sans-serif;
     display: flex;
     margin: 1rem 0 0 1rem;
@@ -311,6 +311,9 @@
     display: flex;
     flex-wrap: wrap;
     font-size: 10px;
+  }
+  .modal-subtask {
+    margin-bottom: .5rem;
   }
   .modal-custom-check{
   height: .8rem;
@@ -362,9 +365,9 @@
   position: absolute;
   display: flex;
   width: 100%;
-  height: 17rem;
+  height: 16rem;
   background-color: var(--color-accent);
-  top: 19%;
+  top: 90%;
  flex-direction: column;
   border-radius:  0 0 10px 10px;
 }
@@ -431,6 +434,19 @@
     justify-content: center;
     
   }
+  .roud-input-container{
+    position: relative;
+    display: flex;
+  }
+  .roud-input-container p {
+    top:-.1rem;
+    left: 7rem;
+  }
+  .sub-element-container p {
+    top:-.1rem;
+    left: 7rem;
+  }
+    
 
 
 
