--- a/css/buttons.css
+++ b/css/buttons.css
@@ -53,12 +53,12 @@
     color: var(--text-secondary);
     outline: none;
     border: none;
-    margin:  0 .2rem 0 .5rem;
+    margin:  .5rem .5rem 0 .5rem;
 }
 .roud-btns-svg{
     
-    width: 1.2rem;
-    height: 1.2rem;
+    width: 1rem;
+    height: 1rem;
     color: var(--text-secondary);
     
     
@@ -214,7 +214,7 @@
     padding: .2rem .4rem .2rem .4rem;
     border-radius: 10px;
     color: var(--text-secondary);
-    font-size: 12px;
+    font-size: 10px;
     letter-spacing: .5px;
     display: flex;
     justify-content: flex-end;
@@ -222,21 +222,24 @@
     flex-direction: column-reverse;
     font-weight: 600;
 }
+.road-btns {
+
+}
 .play-btn{
     color: var(--color-accent-light);
     border: 2px solid var(--color-accent-border);
     background-color: rgba(107, 205, 206, 0.1);
-    box-shadow: 0 0 10px rgba(107, 205, 206, 0.5);
+    
     
 }
 .play-btn svg{
     color: var(--color-accent-light);
-    filter: drop-shadow(0 0 4px rgba(107, 205, 206, 0.5));
+   
 }
 .stop-btn {
     color: var(--color-red-btn);
     border: 2px solid var(--color-red-btn);
-    box-shadow: 0 0 8px rgba(239, 83, 80, 0.6);
+    
     background-color: rgba(238, 94, 91, 0.1);
 }
 .stop-btn svg {
