--- a/css/roudmap.css
+++ b/css/roudmap.css
@@ -23,7 +23,7 @@
   
 }
 .title-roudmap{
-  margin: .5rem .5rem .2rem 1.4rem;
+  /* margin: .5rem .5rem .2rem 1.4rem; */
   display: flex;
   font-size: 18px;
   font-weight: 600;
@@ -122,19 +122,31 @@
 }
 
 
-.timer{
+.node-time{
   display: flex;
-  gap:.5rem;
+  
   background: var(--color-subtask);
   justify-content: center;
   align-items: center;
   font-weight: 500;
-  font-size: 12px;
-  border-radius: 10px;
+  font-size: 10px;
+  border-radius: 0 0 10px 10px;
   letter-spacing: 1px;
-  padding: .2rem;
+  padding: .1rem;
   margin-bottom: .5rem;
-  border: .5px solid var(--glass-border);
+  
+  
+  top: 20%;
+  
+}
+.node-text{
+  background: var(--color-subtask);
+  padding: .5rem;
+  position: relative;
+  width: 50%;
+  border-radius: 10px 0 0 0;
+  border-left: .5px solid var(--glass-border);
+  border-right: .5px solid var(--glass-border);
 }
 .node-time,.progress-text {
   margin-top: 4px;
@@ -155,10 +167,13 @@
   border-radius: 5px;
   overflow: hidden;
   position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .progress-fill {
   height: 100%;
-  width: 20%;
+  width: 0%;
   background-color: var(--color-accent);
   filter: blur(10px);
   transition: width 1s ease-in-out;
@@ -168,6 +183,7 @@
   font-size: 12px;
   letter-spacing: 1px;
   display: flex;
+  position: absolute;
   
 }
 .subtask-list{
