--- a/css/roudmap.css
+++ b/css/roudmap.css
@@ -8,7 +8,7 @@
   position: relative;
 }
 .roadmap-list {
-  gap: 2rem;
+  gap: 4rem;
   padding: 2rem 1.5rem 1.5rem 1.5rem
 }
 
@@ -20,16 +20,28 @@
   flex-direction: column;
   justify-content: flex-end;
   margin-top: 5rem;
-  
 }
+.title-roudmap:after {
+  content: '';
+  border-bottom: 1px solid var(--glass-border);
+  width: 90%;
+  position: absolute;
+  top:120%;
+}
+  
 .title-roudmap{
-  /* margin: .5rem .5rem .2rem 1.4rem; */
+  
+  height: 2rem;
   display: flex;
   font-size: 18px;
   font-weight: 600;
+  border-radius: 8px 8px 0 0;
+  justify-content: center;
+  position: relative;
   letter-spacing: 1px;
   flex-direction: row;
-  justify-content: space-between;
+  align-items: center;
+  
 }
 .roadmap-box {
   flex-grow: 1;
@@ -57,7 +69,7 @@
   
   flex-direction: column;
   position: relative;
-  margin-bottom: 1.3rem;
+  
   scroll-snap-align: start;
   border-radius: 8px;
   
@@ -116,7 +128,8 @@
   flex-wrap: wrap;
   justify-content: space-around;
   flex-direction: row-reverse;
-
+  margin-top: .5rem;
+  margin-bottom: .5rem;
   width: 100%;
   padding: .5rem 0 .5rem 0;
 }
@@ -124,31 +137,34 @@
 
 .node-time{
   display: flex;
-  
-  background: var(--color-subtask);
-  justify-content: center;
   align-items: center;
   font-weight: 500;
   font-size: 10px;
   border-radius: 0 0 10px 10px;
   letter-spacing: 1px;
   padding: .1rem;
-  margin-bottom: .5rem;
+  position: relative;
+  margin-top: .5rem;
   
   
-  top: 20%;
+  
+  
+  
+  
+  
   
 }
 .node-text{
-  background: var(--color-subtask);
-  padding: .5rem;
+  
+  display: flex;
   position: relative;
-  width: 50%;
-  border-radius: 10px 0 0 0;
-  border-left: .5px solid var(--glass-border);
-  border-right: .5px solid var(--glass-border);
+  width: 100%;
+  margin: .5rem 0 0 1rem;
+  padding:.1rem 0 .1rem 0 ;
+  border-radius: 10px 10px 0 0;
+  
 }
-.node-time,.progress-text {
+.progress-text {
   margin-top: 4px;
 }
 .progress-container {
@@ -522,6 +538,8 @@
   .go-back-btn-container{ 
     display: flex;
     margin-left: 1rem;
+    position: fixed;
+    cursor: pointer;
   }
   .disabled-node {
     opacity: .2;
