--- a/css/animations.css
+++ b/css/animations.css
@@ -7,3 +7,14 @@
     --angle: 360deg;
   }
 }
+.connection-animated path {
+  stroke-dasharray: 500;
+  stroke-dashoffset: 500;
+  animation: drawLine 2s ease-out forwards;
+}
+
+@keyframes drawLine {
+  to {
+    stroke-dashoffset: 0;
+  }
+}
