--- a/css/roudmap.css
+++ b/css/roudmap.css
@@ -557,6 +557,9 @@
     z-index: 999;
     pointer-events: none;
   }
+  .connection-glow  {
+  filter: drop-shadow(2px 2px 6px #6BCDCE);
+}
 
     
     
