--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* Karty, modale */
 /* Glassmorphic okna */
 /*  Akcenty */
@@ -116,12 +117,6 @@
   justify-content: center;
   align-items: center;
   position: relative;
-  border: none;
-  outline: none;
-  background: transparent;
-  width: 100%;
-  height: 100%;
-  margin: 0;
 }
 .calendar__week {
   display: grid;
@@ -397,6 +392,100 @@
 }
 .calendar__weekday-btn:last-child {
   border-right: none;
+}
+
+.calendar {
+  --meta-nav-w: 2.25rem;
+}
+
+.calendar__meta {
+  grid-column: 2;
+  grid-row: 1/span 2;
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: center;
+  gap: 0.5rem;
+  min-width: 0;
+}
+
+.calendar__meta-group {
+  display: grid;
+  grid-template-columns: var(--meta-nav-w) 1fr var(--meta-nav-w);
+  align-items: center;
+  gap: 0.5rem;
+  inline-size: 100%;
+  min-width: 0;
+  justify-items: center;
+}
+.calendar__meta-group--year {
+  white-space: nowrap;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+  font-weight: 700;
+  font-size: 18px;
+}
+.calendar__meta-group--week {
+  color: #aaaaaa;
+  font-weight: 300;
+  font-size: 12px;
+}
+
+.calendar__meta-nav {
+  border: none;
+  outline: none;
+  background: transparent;
+  width: 1.2rem;
+  height: 1.2rem;
+  margin: 0;
+  color: #aaaaaa;
+  filter: drop-shadow(5px 8px 15px #777777);
+  display: grid;
+  place-items: center;
+  border-radius: 0.5rem;
+}
+.calendar__meta-nav:focus-visible {
+  outline: 2px solid #9be5ec;
+  outline-offset: 2px;
+}
+
+.calendar__meta-carousel {
+  /* jak Twoje karuzele: 1 element = 100% */
+  min-width: 0;
+  display: flex;
+  width: auto;
+  flex-wrap: nowrap;
+  overflow-x: auto;
+  gap: 1rem;
+  scroll-behavior: smooth;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  scroll-snap-type: x mandatory;
+  /* bez $width */
+  overscroll-behavior-x: contain;
+  scroll-padding-inline: 0; /* ważne: brak dryfu */
+}
+.calendar__meta-carousel::-webkit-scrollbar {
+  display: none;
+}
+.calendar__meta-carousel > * {
+  scroll-snap-align: start;
+  flex-shrink: 0;
+}
+.calendar__meta-carousel > * {
+  scroll-snap-align: center;
+}
+
+.calendar__meta-item {
+  flex: 0 0 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  scroll-snap-stop: always;
+}
+.calendar__meta-item--active {
+  color: #9be5ec;
+  text-decoration: underline;
+  text-underline-offset: 0.3rem;
 }
 
 /*# sourceMappingURL=main.css.map */
